--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -20,7 +20,7 @@ on:
     - main
 
 env:
-  PROJECT_ID: ${{ secrets.GKE_PROJECT }}
+  PROJECT_ID: mindful-vial-325012
   GAR_LOCATION: us-central1 # # TODO: update region of the Artifact Registry
   GKE_CLUSTER: demo-test    # TODO: update to cluster name
   GKE_ZONE: us-central1-c   # TODO: update to cluster zone
