--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -25,7 +25,7 @@ env:
   GKE_CLUSTER: demo-test    # TODO: update to cluster name
   GKE_ZONE: us-central1-c   # TODO: update to cluster zone
   DEPLOYMENT_NAME: gke-test # TODO: update deployment name if changed in deployment.yaml or service.yml
-  REPOSITORY: samples # TODO: update to Artifact Registry docker repository
+  REPOSITORY: demo        # TODO: update to Artifact Registry docker repository
   IMAGE: static-site
 
 jobs:
@@ -37,14 +37,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    # Setup gcloud CLI
     - uses: google-github-actions/setup-gcloud@master
       with:
         service_account_key: ${{ secrets.GKE_SA_KEY }}
         project_id: ${{ secrets.GKE_PROJECT }}
-
-    # Configure Docker to use the gcloud command-line tool as a credential
-    # helper for authentication (https://cloud.google.com/artifact-registry/docs/docker/authentication)
     - name: Docker configuration
       run: |-
         gcloud --quiet auth configure-docker $GAR_LOCATION-docker.pkg.dev
