--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -55,7 +55,7 @@ jobs:
     # Build the Docker image
     - name: Build
       run: |-
-        docker build -t devopstraining/DotnetCore/CoreAPIs/Dockerfile \
+        docker build \
           --tag "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA" \
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" \
